--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 startIndex = line.indexOf(">") + 1;
                 endIndex = line.indexOf("</h2>");
 
-                text = line.substring(startIndex, endIndex);
+                text = formatTextHtml(line.substring(startIndex, endIndex));
                 formattedContent += "\n[size=2][b]" + text + "[/b][/size]\n";
 
                 console.log(text);
@@ -169,9 +169,9 @@
                     endIndex = line.indexOf("</p>");
 
                     if (openListBracket) {
-                        text = "[*] " + formatTextBlock(line.substring(startIndex, endIndex)) + "\n";
+                        text = "[*] " + formatTextHtml(line.substring(startIndex, endIndex)) + "\n";
                     } else {
-                        text = "\n" + formatTextBlock(line.substring(startIndex, endIndex)) + "\n";
+                        text = "\n" + formatTextHtml(line.substring(startIndex, endIndex)) + "\n";
                     }
                     formattedContent += text;
 
@@ -214,7 +214,7 @@
             return formattedLink;
         }
 
-        function formatTextBlock(text) {
+        function formatTextHtml(text) {
             var formattedText = text;
 
             // And Sign
@@ -232,10 +232,6 @@
 
                 var index1 = formattedText.indexOf("<a href=");
                 var index2 = formattedText.substring(index1).indexOf(">") + 1;
-
-                console.log("LINK");
-                console.log("before link: " + formattedText.substring(0, startIndex));
-                console.log("after link: " + formattedText.substring(index1).substring(index2));
 
                 formattedText =
                     formattedText.substring(0, index1) // Everything before the link
